# DigitRecognizer

./: README.md
kuiperInfer/: CMakeLists.txt  README.md
kuiperInfer/demos/: CMakeLists.txt
kuiperInfer/demos/mnist/: CMakeLists.txt  mnist_test.cpp
kuiperInfer/tmp/mnist/demo/: model_torchscript.pnnx.param
orInfer/: CMakeLists.txt  onnx_infer.cpp
pytrain/: cnn.py  export_onnx.py  export_ts.py  pytorch_mnist.py
pytrain/models/: model.onnx  model.pt  model_torchscript.pt
